--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,43 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SNAPP_TRIP
+spring.datasource.username=root
+spring.datasource.password=H@mor1369
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=3000
+#spring.redis.pool.max-active=5
+spring.redis.database=0
 
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+spring.cache.redis.time-to-live=120000
+spring.cache.type=redis
+spring.cache.cache-names=url
+#spring:
+#datasource:
+#username:root
+#password:root
+#url:jdbc:mysql://192.168.0.101:3406/blog
+#driver-class-name:com.mysql.jdbc.Driver
+#jpa:
+#properties:
+#hibernate:
+#dialect:org.hibernate.dialect.MySQL5Dialect
+#ddl-auto:none
+#naming_strategy:org.hibernate.cfg.ImprovedNamingStrategy
+#show-sql:true
+#database:mysql
+#management.endpoints.web.exposure.include=info,health,metrics
+#
+## JPA and Security is not required for Metrics application
+#spring.autoconfigure.exclude= org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, \
+#  org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, \
+#  org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration, \
+#  org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration, \
+#  org.springframework.boot.autoconfigure.security.servlet.SecurityFilterAutoConfiguration
+#  org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration, \
