--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,11 @@ services:
       - '3306:3306'
     expose:
       - '3306'
-  #    volumes:
-  #      - ./db:/var/lib/mysql
-  #      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-  #    networks:
-  #      - mysqlnetwork
 
   redis-server:
     restart: always
+    environment:
+    - REDIS_URL=redis-server
     image: redis:4.0
     container_name: redis-server
     command: /bin/bash -c 'redis-server --appendonly yes'
